--- a/client/static/index.html
+++ b/client/static/index.html
@@ -154,14 +154,14 @@
 </div>
 
 <script>
-  const WS_API_HOST = 'http://minikube'; // TODO: set as env var
+  const WS_API_HOST = 'http://44.203.120.204'; // TODO: set as env var
   const socket = io(WS_API_HOST, {
     path: '/api/ws',
     transports: ['websocket']
   });
   let userId = null;
 
-  const API_URL = 'http://minikube/api'; // TODO: set as env var
+  const API_URL = 'http://44.203.120.204/api'; // TODO: set as env var
 
   function submitUsername() {
     const name = document.getElementById('username-input').value;
